--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,365 @@ body {
     text-wrap: balance;
   }
 }
+
+
+
+
+[data-theme="synthwave"] .btn {
+  color: rgb(249, 252, 251);
+}
+
+[data-theme="synthwave"] .bgbg {
+  background-color: #0B2447;
+}
+
+
+
+[data-theme="synthwave"] .themeNav {
+  background-color: #19376D;
+}
+
+
+
+[data-theme="synthwave"] .pp  {
+  background-color: #576CBC;
+}  
+ 
+
+[data-theme="synthwave"] .nnn {
+  padding: 20px;
+  border-radius: 0px;
+  background: #0B2447;
+  box-shadow: 5px 5px 6px #121111,
+    -5px -5px 6px #080707;
+}
+
+[data-theme="synthwave"] .nnn1 {
+  padding: 20px;
+
+  border-radius: 20px;
+  background-color: #19376D;
+  box-shadow: 5px 5px 5px #110f0f,
+    -5px -5px 5px #0f0e0e;
+
+}
+[data-theme="synthwave"] .crt {
+  padding: 20px;
+
+  border-radius: 20px;
+  background-color: #19376D;
+  box-shadow: 5px 5px 5px #070606,
+    -5px -5px 5px #050505;
+
+}
+
+[data-theme="synthwave"] .nnn2 {
+  padding: 20px;
+  border-radius: 50px;
+  background: #19376D;
+  box-shadow: 5px 5px 6px #121111,
+    -5px -5px 6px #0f0e0e;
+}
+
+[data-theme="synthwave"] :hover.nnn {
+  background-color: #19376D;
+}
+
+
+[data-theme="synthwave"] .experience {
+  border-radius: 50px;
+  background: #0B2447;
+  box-shadow: 29px 29px 100px #181717,
+    -29px -29px 100px #131212;
+}
+
+
+
+[data-theme="synthwave"] .n4 div {
+  background: #19376D;
+  box-shadow: 5px 5px 6px #110f0f,
+    -5px -5px 6px #080707;
+
+}
+
+
+
+[data-theme="synthwave"] .tb {
+  --tw-text-opacity: 2;
+  color: rgb(200 8 8 / var(--tw-text-opacity));
+}
+
+.tb {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.nnn {
+  padding: 20px;
+  border-radius: 0px;
+  background: #f3eded;
+  box-shadow: 5px 5px 5px #161616,
+    -5px -5px 5px #ffffff;
+}
+
+.nnn1 {
+  padding: 20px;
+  border-radius: 20px;
+  background: #e7e7e7de;
+  box-shadow: 5px 5px 5px #626262,
+    -5px -5px 5px #ffffff;
+}
+
+.nnn2 {
+  padding: 20px;
+  border-radius: 20px;
+  background: #fafafa;
+  box-shadow: 5px 5px 11px #646464,
+    -5px -5px 11px #ffffff;
+
+}
+
+.n3 div {
+  padding: 20px;
+  border-radius: 20px;
+  background: #f6f4f4;
+  box-shadow: 5px 5px 5px #626262,
+    -5px -5px 5px #ffffff;
+}
+
+.n4 div {
+  padding: 20px;
+  border-radius: 20px;
+  background: #d8d4d4;
+  box-shadow: 5px 5px 5px #626262,
+    -5px -5px 5px #ffffff;
+}
+
+
+.input {
+  width: 60%;
+  padding: 20px;
+  border-radius: 20px;
+  background: #f6f4f4;
+  box-shadow: 5px 5px 5px #626262,
+    -5px -5px 5px #ffffff;
+}
+
+.textarea {
+  padding: 20px;
+  border-radius: 20px;
+  background: #f6f4f4;
+  box-shadow: 5px 5px 5px #626262,
+    -5px -5px 5px #ffffff;
+}
+
+
+[data-theme="synthwave"] .input {
+  width: 200px;
+  height: 45px;
+  border: none;
+  outline: none;
+  padding: 0px 7px;
+  border-radius: 6px;
+  color: #fff;
+  font-size: 15px;
+  background-color: transparent;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 1),
+    -1px -1px 6px rgba(255, 255, 255, 0.4);
+}
+
+[data-theme="synthwave"] .textarea {
+  width: 90%;
+  height: 135px;
+  padding: 0px 7px;
+  border-radius: 6px;
+  background-color: transparent;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 1),
+    -1px -1px 6px rgba(255, 255, 255, 0.4);
+}
+
+.card div {
+  width: 190px;
+  height: 90px;
+  background: #ffff;
+  box-shadow: 0 1px 25px rgba(0, 0, 0, 0.2);
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  padding: 12px 10px;
+}
+
+[data-theme="synthwave"] .cover div {
+   background-color: #e7510c; 
+ }
+
+[data-theme="synthwave"] .book div {
+  background-color: #576CBC;
+  box-shadow: 5px 5px 6px #121111,
+    -5px -5px 6px #0e0d0d;
+} 
+
+[data-theme="synthwave"] .cover {
+ background-color: #0B2447;
+  border-radius: 50px;
+ 
+  box-shadow: 5px 5px 6px #121111,
+    -5px -5px 6px #070606;
+}
+
+[data-theme="synthwave"] .book {
+  background-color: #19376D;
+
+  box-shadow: 5px 5px 6px #121111,
+    -5px -5px 6px #0e0d0d;
+}
+
+[data-theme="synthwave"] .n8 {
+  background-color: #464343;
+}
+
+.book {
+  border-radius: 10px;
+  width: 80%;
+  height: 300px;
+  margin-top: 25px;
+  margin: auto;
+  background-color: rgb(236, 234, 234);
+  -webkit-box-shadow: 1px 1px 12px #000;
+  box-shadow: 1px 1px 12px #000;
+  -webkit-transform: preserve-3d;
+  -ms-transform: preserve-3d;
+  transform: preserve-3d;
+  -webkit-perspective: 2000px;
+  perspective: 2000px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  color: #000;
+}
+
+.cover {
+  top: 0;
+  position: absolute;
+  background-color: lightgray;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  cursor: pointer;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transform-origin: 0;
+  -ms-transform-origin: 0;
+  transform-origin: 0;
+  -webkit-box-shadow: 1px 1px 12px #000;
+  box-shadow: 1px 1px 12px #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.book:hover .cover {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transform: rotatey(-80deg);
+  -ms-transform: rotatey(-80deg);
+  transform: rotatey(-80deg);
+}
+
+p {
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  font-size: 17px;
+  position: relative;
+  display: inline-block;
+  width: 3.5em;
+  height: 2em;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  --background: #28096b;
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--background);
+  transition: .5s;
+  border-radius: 30px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 1.4em;
+  width: 1.4em;
+  border-radius: 50%;
+  left: 10%;
+  bottom: 15%;
+  box-shadow: inset 8px -4px 0px 0px #fff000;
+  background: var(--background);
+  transition: .5s;
+}
+
+input:checked+.slider {
+  background-color: #522ba7;
+}
+
+input:checked+.slider:before {
+  transform: translateX(100%);
+  box-shadow: inset 15px -4px 0px 15px #fff000;
+}
+
+.experience {
+  border-radius: 50px;
+  background: #f8f7f7;
+  box-shadow: 29px 29px 100px #6b6a6a,
+    -29px -29px 100px #ffffff;
+}
+
+.spinner {
+  display: block;
+  width: 200px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+.tggl{
+  border-radius: 15px;
+background: #f5b0b0;
+box-shadow:  5px 5px 100px #444242,
+             -5px -5px 100px #ffffff;
+}
+
+[data-theme="synthwave"] .tggl {
+  background: #0B2447;
+}
